Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntegerBooleanWrapped.quorum
class main
    action Main
        integer i = true
    end
end